# rcs

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.md  skill-proposal.md
.github/workflows/: eval-suite.yml  frontmatter-lint.yml  link-check.yml
docs/: conventions.md  eval-protocol.md  governance.md
docs/explanation/: pragmatic-discipline.md  sigma-score.md  what-is-a-skill.md
docs/how-to/: audit-your-docs-for-ai-slop.md  contribute-a-skill.md  install-and-invoke-a-skill.md
docs/superpowers/changelog-fragments/: README.md  batch-1-high-sigma.md  batch-2-stats-discipline.md  batch-3-ml-eval.md  batch-4-data-hygiene.md  batch-5-meta.md  v2-batch-1-notebook-hygiene.md  v2-batch-2-data-engineering.md  v2-batch-3-research-discipline.md  v2-batch-4-stats-math.md  v3-batch-1-ml-eval-expansion.md  v3-batch-2-model-comparison.md  v3-batch-3-rag-eval.md  v3-batch-4-perf-interpretation.md  v4-batch-1-appsec-sbom.md  v4-batch-2-secure-coding-rules.md  v4-batch-3-threat-modeling.md  v4-batch-4-red-team.md  v5-batch-1-deployment.md  (+15 more)
docs/tutorials/: getting-started.md
skills/: README.md
skills/claude-code-meta/: README.md
skills/ml-datasci/: README.md
skills/security/: README.md
skills/teaching/: README.md
skills/workflow/: README.md
tools/: lint_frontmatter.py  lint_links.py  lint_skill_md.py  run_evals.py
tools/tests/: test_lint_frontmatter.py  test_lint_links.py  test_lint_skill_md.py  test_run_evals.py
(+685 files in other folders)
