[project]
name = "rcs-tools"
version = "0.1.0"
description = "Tooling for Rock's Claude Skills (RCS) — lint and eval harness"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "pyyaml>=6.0",
    "markdown-it-py>=3.0.0",
    "click>=8.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
]

[tool.pytest.ini_options]
testpaths = ["tools/tests"]
pythonpath = ["."]
